# browser-agent-rl

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: qwen2_0.5b_full.yaml  qwen2_0.5b_lora.yaml
docker/: Dockerfile.browsergym  Dockerfile.training  browsergym_server.py
src/browser_control/: __init__.py  config.py  env_client.py  evaluate.py  fine_tune.py  paths.py  sft_warmup.py
